Adaptation to htmlpreview.github.com
Replace a character within "</body>"

--- a/doform.html
+++ b/doform.html
@@ -11,7 +11,7 @@
     var sHeader1 = document.getElementById('Header1Id').value;
     var sHeader2 = document.getElementById('Header2Id').value;
     var sCssDeclare = "<link rel=\u0022stylesheet\u0022 type=\u0022text/css\u0022 media=\u0022screen,print\u0022; href=\u0022" + document.getElementById('NameId').value + ".css\u0022>";
-    var sFooter="\n</form>\n</body>\n</html>";
+    var sFooter="\n</form>\n<\u002Fbody>\n</html>";
     var sMoveHeader1 = document.getElementById('MoveHeader1Id').value;
     var sMoveHeader2 = document.getElementById('MoveHeader2Id').value;
     var sMoveFooter = "\n</body>\n</html>";
