Adaptation to htmlpreview.github.com
Replace a character within "</body>"

--- a/doform.html
+++ b/doform.html
@@ -14,7 +14,7 @@
     var sFooter="\n</form>\n<\u002Fbody>\n</html>";
     var sMoveHeader1 = document.getElementById('MoveHeader1Id').value;
     var sMoveHeader2 = document.getElementById('MoveHeader2Id').value;
-    var sMoveFooter = "\n</body>\n</html>";
+    var sMoveFooter = "\n<\u002Fbody>\n</html>";
     var sStringList = document.getElementById('ListId').value;
     sStringArray = sStringList.split('\n');
     for(var i = 0; i<sStringArray.length; i++) {
