--- a/doform.html
+++ b/doform.html
@@ -20,9 +20,12 @@
     for(var i = 0; i<sStringArray.length; i++) {
       var sString = sStringArray[i];
       if (sString != "") {
-        sRowHtml = sRowHtml + "\n<input type='input' name='" + sString + "' class='" + sString + "' title='" + sString + "'>";
-        sRowCss = sRowCss + "\n." + sString + " {position:absolute;top:" + (10 * i) + "px;left:300px;width:160px;text-align:left;}";
-        sRowMove = sRowMove + "\n<div id='" + sString + "' name = 'myDivs' class='" + sString + "' style='position:absolute;top:" + (10 * i) + "px;left:300px;background-color:#606060;'>" + sString + "</div>";
+        sRowHtml = sRowHtml + "\n<label id='" + sString + "Label' class='" + sString + "Label'>" + sString + ":<label>";
+        sRowHtml = sRowHtml + "\n<input type='input' id='" + sString + "Input' name='" + sString + "' class='" + sString + "Input' title='" + sString + "'>";
+        sRowCss = sRowCss + "\n." + sString + "Label {position:absolute;top:" + (40 * i + 20) + "px;left:160px;width:160px;text-align:left;}";
+        sRowCss = sRowCss + "\n." + sString + "Input {position:absolute;top:" + (40 * i + 40) + "px;left:320px;width:160px;text-align:left;}";
+        sRowMove = sRowMove + "\n<div id='" + sString + "Label' name = 'myDivs' class='" + sString + "Label' style='position:absolute;top:" + (40 * i + 20) + "px;left:160px;background-color:#606060;border-style:solid;'>" + sString + ":</div>";
+        sRowMove = sRowMove + "\n<div id='" + sString + "Input' name = 'myDivs' class='" + sString + "Input' style='position:absolute;top:" + (40 * i + 40) + "px;left:320px;background-color:#606060;border-style:ridge;'>" + sString + "</div>";
       }
     }
     document.getElementById('Html With External Css').value = sHeader1 + sCssDeclare + sHeader2 + sRowHtml + sFooter;
@@ -46,7 +49,7 @@ function copySummaryToInputs() {
   for(var i=0;i<sStringArray.length;i++) {
     sRowArray=sStringArray[i].split("=");
     if (sRowArray.length == 2) {
-      document.getElementsByName(sRowArray[0])[0].value = sRowArray[1].replace(/__/g,"\n").replace(/::/g,"=");
+      document.getElementsByName(sRowArray[0] + "Input")[0].value = sRowArray[1].replace(/__/g,"\n").replace(/::/g,"=");
     }
   }
   document.getElementById('Summary').value = "";
@@ -57,7 +60,7 @@ function copyInputsToSummary() {
   var myInputsArray = document.formInputs.elements;
   for(var i=0;i<myInputsArray.length;i++) {
     if (myInputsArray[i].value != "") {
-      sReturn = sReturn + (sReturn==""?'':'\n') + myInputsArray[i].name + "=" + myInputsArray[i].value.replace(/\n/g,"__").replace(/=/g,"::");
+      sReturn = sReturn + (sReturn==""?'':'\n') + myInputsArray[i].name.substr(0, myInputsArray[i].name.length - "Input".length) + "=" + myInputsArray[i].value.replace(/\n/g,"__").replace(/=/g,"::");
     }
   }
   document.getElementById('Summary').value = sReturn;
